seaqt/QtCore/gen_qcbormap.nim

proc fcQCborMapConstIterator_operatorLesserOrEqual_QCborMap_Iterator(self: pointer, other: pointer): bool {.importc: "QCborMap__ConstIterator_operatorLesserOrEqual_QCborMap_Iterator".}
proc fcQCborMapConstIterator_operatorGreater_QCborMap_Iterator(self: pointer, other: pointer): bool {.importc: "QCborMap__ConstIterator_operatorGreater_QCborMap_Iterator".}
proc fcQCborMapConstIterator_operatorGreaterOrEqual_QCborMap_Iterator(self: pointer, other: pointer): bool {.importc: "QCborMap__ConstIterator_operatorGreaterOrEqual_QCborMap_Iterator".}
proc fcQCborMapConstIterator_operatorEqual_QCborMap_ConstIterator(self: pointer, o: pointer): bool {.importc: "QCborMap__ConstIterator_operatorEqual_QCborMap_ConstIterator".}
proc fcQCborMapConstIterator_operatorNotEqual_QCborMap_ConstIterator(self: pointer, o: pointer): bool {.importc: "QCborMap__ConstIterator_operatorNotEqual_QCborMap_ConstIterator".}
proc fcQCborMapConstIterator_operatorLesser_QCborMap_ConstIterator(self: pointer, other: pointer): bool {.importc: "QCborMap__ConstIterator_operatorLesser_QCborMap_ConstIterator".}
proc fcQCborMapConstIterator_operatorLesserOrEqual_QCborMap_ConstIterator(self: pointer, other: pointer): bool {.importc: "QCborMap__ConstIterator_operatorLesserOrEqual_QCborMap_ConstIterator".}
proc fcQCborMapConstIterator_operatorGreater_QCborMap_ConstIterator(self: pointer, other: pointer): bool {.importc: "QCborMap__ConstIterator_operatorGreater_QCborMap_ConstIterator".}
proc fcQCborMapConstIterator_operatorGreaterOrEqual_QCborMap_ConstIterator(self: pointer, other: pointer): bool {.importc: "QCborMap__ConstIterator_operatorGreaterOrEqual_QCborMap_ConstIterator".}
proc fcQCborMapConstIterator_operatorPlusPlus(self: pointer): pointer {.importc: "QCborMap__ConstIterator_operatorPlusPlus".}
proc fcQCborMapConstIterator_operatorPlusPlusInt(self: pointer, param1: cint): pointer {.importc: "QCborMap__ConstIterator_operatorPlusPlus_int".}
proc fcQCborMapConstIterator_operatorMinusMinus(self: pointer): pointer {.importc: "QCborMap__ConstIterator_operatorMinusMinus".}
proc fcQCborMapConstIterator_operatorMinusMinusInt(self: pointer, param1: cint): pointer {.importc: "QCborMap__ConstIterator_operatorMinusMinus_int".}
proc fcQCborMapConstIterator_operatorPlusAssign(self: pointer, j: int64): pointer {.importc: "QCborMap__ConstIterator_operatorPlusAssign".}
proc fcQCborMapConstIterator_operatorMinusAssign(self: pointer, j: int64): pointer {.importc: "QCborMap__ConstIterator_operatorMinusAssign".}
proc fcQCborMapConstIterator_operatorPlus(self: pointer, j: int64): pointer {.importc: "QCborMap__ConstIterator_operatorPlus".}
proc fcQCborMapConstIterator_operatorMinusQsizetype(self: pointer, j: int64): pointer {.importc: "QCborMap__ConstIterator_operatorMinus_qsizetype".}
proc fcQCborMapConstIterator_operatorMinus_QCborMap_ConstIterator(self: pointer, j: pointer): int64 {.importc: "QCborMap__ConstIterator_operatorMinus_QCborMap_ConstIterator".}
proc fcQCborMapConstIterator_new(): ptr cQCborMapConstIterator {.importc: "QCborMap__ConstIterator_new".}
proc fcQCborMapConstIterator_new2(fromVal: pointer): ptr cQCborMapConstIterator {.importc: "QCborMap__ConstIterator_new_from".}

proc operatorAssign*(self: gen_qcbormap_types.QCborMap, fromVal: gen_qcbormap_types.QCborMap): void =
  fcQCborMap_operatorAssign(self.h, fromVal.h)

proc swap*(self: gen_qcbormap_types.QCborMap, other: gen_qcbormap_types.QCborMap): void =
  fcQCborMap_swap(self.h, other.h)

proc toCborValue*(self: gen_qcbormap_types.QCborMap): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborMap_toCborValue(self.h), owned: true)

proc size*(self: gen_qcbormap_types.QCborMap): int64 =
  fcQCborMap_size(self.h)

proc isEmpty*(self: gen_qcbormap_types.QCborMap): bool =
  fcQCborMap_isEmpty(self.h)

proc clear*(self: gen_qcbormap_types.QCborMap): void =
  fcQCborMap_clear(self.h)

proc keys*(self: gen_qcbormap_types.QCborMap): seq[gen_qcborvalue_types.QCborValue] =
  var v_ma = fcQCborMap_keys(self.h)
  var vx_ret = newSeq[gen_qcborvalue_types.QCborValue](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qcborvalue_types.QCborValue(h: v_outCast[i], owned: true)
  c_free(v_ma.data)
  vx_ret

proc value*(self: gen_qcbormap_types.QCborMap, key: clonglong): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborMap_valueQint64(self.h, key), owned: true)

proc value*(self: gen_qcbormap_types.QCborMap, key: openArray[char]): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborMap_value_QString(self.h, struct_seaqt_string(data: if len(key) > 0: addr key[0] else: nil, len: csize_t(len(key)))), owned: true)

proc value*(self: gen_qcbormap_types.QCborMap, key: gen_qcborvalue_types.QCborValue): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborMap_value_QCborValue(self.h, key.h), owned: true)

proc operatorSubscript*(self: gen_qcbormap_types.QCborMap, key: clonglong): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborMap_operatorSubscriptConstQint64(self.h, key), owned: true)

proc operatorSubscript*(self: gen_qcbormap_types.QCborMap, key: openArray[char]): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborMap_operatorSubscriptConstCQString(self.h, struct_seaqt_string(data: if len(key) > 0: addr key[0] else: nil, len: csize_t(len(key)))), owned: true)

proc operatorSubscript*(self: gen_qcbormap_types.QCborMap, key: gen_qcborvalue_types.QCborValue): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborMap_operatorSubscriptConstCQCborValue(self.h, key.h), owned: true)

proc operatorSubscript2*(self: gen_qcbormap_types.QCborMap, key: clonglong): gen_qcborvalue_types.QCborValueRef =
  gen_qcborvalue_types.QCborValueRef(h: fcQCborMap_operatorSubscriptQint64(self.h, key), owned: true)

proc operatorSubscript2*(self: gen_qcbormap_types.QCborMap, key: openArray[char]): gen_qcborvalue_types.QCborValueRef =
  gen_qcborvalue_types.QCborValueRef(h: fcQCborMap_operatorSubscriptCQString(self.h, struct_seaqt_string(data: if len(key) > 0: addr key[0] else: nil, len: csize_t(len(key)))), owned: true)

proc operatorSubscript2*(self: gen_qcbormap_types.QCborMap, key: gen_qcborvalue_types.QCborValue): gen_qcborvalue_types.QCborValueRef =
  gen_qcborvalue_types.QCborValueRef(h: fcQCborMap_operatorSubscriptCQCborValue(self.h, key.h), owned: true)

proc take*(self: gen_qcbormap_types.QCborMap, key: clonglong): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborMap_takeQint64(self.h, key), owned: true)

proc take*(self: gen_qcbormap_types.QCborMap, key: openArray[char]): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborMap_take_QString(self.h, struct_seaqt_string(data: if len(key) > 0: addr key[0] else: nil, len: csize_t(len(key)))), owned: true)

proc take*(self: gen_qcbormap_types.QCborMap, key: gen_qcborvalue_types.QCborValue): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborMap_take_QCborValue(self.h, key.h), owned: true)

proc remove*(self: gen_qcbormap_types.QCborMap, key: clonglong): void =
  fcQCborMap_removeQint64(self.h, key)

proc remove*(self: gen_qcbormap_types.QCborMap, key: openArray[char]): void =
  fcQCborMap_remove_QString(self.h, struct_seaqt_string(data: if len(key) > 0: addr key[0] else: nil, len: csize_t(len(key))))

proc remove*(self: gen_qcbormap_types.QCborMap, key: gen_qcborvalue_types.QCborValue): void =
  fcQCborMap_remove_QCborValue(self.h, key.h)

proc contains*(self: gen_qcbormap_types.QCborMap, key: clonglong): bool =
  fcQCborMap_containsQint64(self.h, key)

proc contains*(self: gen_qcbormap_types.QCborMap, key: openArray[char]): bool =
  fcQCborMap_contains_QString(self.h, struct_seaqt_string(data: if len(key) > 0: addr key[0] else: nil, len: csize_t(len(key))))

proc contains*(self: gen_qcbormap_types.QCborMap, key: gen_qcborvalue_types.QCborValue): bool =
  fcQCborMap_contains_QCborValue(self.h, key.h)

proc compare*(self: gen_qcbormap_types.QCborMap, other: gen_qcbormap_types.QCborMap): cint =
  fcQCborMap_compare(self.h, other.h)

proc operatorEqual*(self: gen_qcbormap_types.QCborMap, other: gen_qcbormap_types.QCborMap): bool =
  fcQCborMap_operatorEqual(self.h, other.h)

proc operatorNotEqual*(self: gen_qcbormap_types.QCborMap, other: gen_qcbormap_types.QCborMap): bool =
  fcQCborMap_operatorNotEqual(self.h, other.h)

proc operatorLesser*(self: gen_qcbormap_types.QCborMap, other: gen_qcbormap_types.QCborMap): bool =
  fcQCborMap_operatorLesser(self.h, other.h)

proc begin*(self: gen_qcbormap_types.QCborMap): gen_qcbormap_types.QCborMapIterator =
  gen_qcbormap_types.QCborMapIterator(h: fcQCborMap_begin(self.h), owned: true)

proc constBegin*(self: gen_qcbormap_types.QCborMap): gen_qcbormap_types.QCborMapConstIterator =
  gen_qcbormap_types.QCborMapConstIterator(h: fcQCborMap_constBegin(self.h), owned: true)

proc begin2*(self: gen_qcbormap_types.QCborMap): gen_qcbormap_types.QCborMapConstIterator =
  gen_qcbormap_types.QCborMapConstIterator(h: fcQCborMap_beginConst(self.h), owned: true)

proc cbegin*(self: gen_qcbormap_types.QCborMap): gen_qcbormap_types.QCborMapConstIterator =
  gen_qcbormap_types.QCborMapConstIterator(h: fcQCborMap_cbegin(self.h), owned: true)

proc endX*(self: gen_qcbormap_types.QCborMap): gen_qcbormap_types.QCborMapIterator =
  gen_qcbormap_types.QCborMapIterator(h: fcQCborMap_endX(self.h), owned: true)

proc constEnd*(self: gen_qcbormap_types.QCborMap): gen_qcbormap_types.QCborMapConstIterator =
  gen_qcbormap_types.QCborMapConstIterator(h: fcQCborMap_constEnd(self.h), owned: true)

proc endX2*(self: gen_qcbormap_types.QCborMap): gen_qcbormap_types.QCborMapConstIterator =
  gen_qcbormap_types.QCborMapConstIterator(h: fcQCborMap_endConst(self.h), owned: true)

proc cend*(self: gen_qcbormap_types.QCborMap): gen_qcbormap_types.QCborMapConstIterator =
  gen_qcbormap_types.QCborMapConstIterator(h: fcQCborMap_cend(self.h), owned: true)

proc erase*(self: gen_qcbormap_types.QCborMap, it: gen_qcbormap_types.QCborMapIterator): gen_qcbormap_types.QCborMapIterator =
  gen_qcbormap_types.QCborMapIterator(h: fcQCborMap_erase_QCborMapIterator(self.h, it.h), owned: true)

proc erase*(self: gen_qcbormap_types.QCborMap, it: gen_qcbormap_types.QCborMapConstIterator): gen_qcbormap_types.QCborMapIterator =
  gen_qcbormap_types.QCborMapIterator(h: fcQCborMap_erase_QCborMapConstIterator(self.h, it.h), owned: true)

proc extract*(self: gen_qcbormap_types.QCborMap, it: gen_qcbormap_types.QCborMapIterator): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborMap_extract_QCborMapIterator(self.h, it.h), owned: true)

proc extract*(self: gen_qcbormap_types.QCborMap, it: gen_qcbormap_types.QCborMapConstIterator): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborMap_extract_QCborMapConstIterator(self.h, it.h), owned: true)

proc empty*(self: gen_qcbormap_types.QCborMap): bool =
  fcQCborMap_empty(self.h)

proc find*(self: gen_qcbormap_types.QCborMap, key: clonglong): gen_qcbormap_types.QCborMapIterator =
  gen_qcbormap_types.QCborMapIterator(h: fcQCborMap_findQint64(self.h, key), owned: true)

proc find*(self: gen_qcbormap_types.QCborMap, key: openArray[char]): gen_qcbormap_types.QCborMapIterator =
  gen_qcbormap_types.QCborMapIterator(h: fcQCborMap_findCQString(self.h, struct_seaqt_string(data: if len(key) > 0: addr key[0] else: nil, len: csize_t(len(key)))), owned: true)

proc find*(self: gen_qcbormap_types.QCborMap, key: gen_qcborvalue_types.QCborValue): gen_qcbormap_types.QCborMapIterator =
  gen_qcbormap_types.QCborMapIterator(h: fcQCborMap_findCQCborValue(self.h, key.h), owned: true)
